# ChangeLog for sci-visualization/pyxplot
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/pyxplot/ChangeLog,v 1.6 2007/10/11 15:21:51 bicatali Exp $

*pyxplot-0.6.3.1 (11 Oct 2007)

  11 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org>
  -files/0.5.8-respect-destdir.patch, +files/0.6.3.1-dont-build-pyx.patch,
  -files/0.5.8-dont-build-pyx.patch, +files/0.6.3.1-respect-destdir.patch,
  -pyxplot-0.5.8.ebuild, pyxplot-0.6.3.ebuild, +pyxplot-0.6.3.1.ebuild:
  Version bump + quotes cleaning.

*pyxplot-0.6.3 (02 Mar 2007)

  02 Mar 2007; Sébastien Fabbro <bicatali@gentoo.org>
  +files/0.6.3-dont-build-pyx.patch, +files/0.6.3-respect-destdir.patch,
  metadata.xml, +pyxplot-0.6.3.ebuild:
  Version bump. Cleaning, new patches.

  19 Feb 2007; Sébastien Fabbro <bicatali@gentoo.org> pyxplot-0.5.8.ebuild:
  keyword ~amd64.

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; pyxplot-0.5.8.ebuild:
  Install some more docs, and put docs in $PF rather than $PN.

*pyxplot-0.5.8 (24 Sep 2006)

  24 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/0.5.8-dont-build-pyx.patch, +files/0.5.8-respect-destdir.patch,
  +metadata.xml, +pyxplot-0.5.8.ebuild:
  Graphing program similar to gnuplot to produce publication-quality figures.
