@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/pyxplot/Attic/pyxplot-0.6.3.ebuild,v 1.2 2007/10/11 15:21:51 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/pyxplot/Attic/pyxplot-0.6.3.ebuild,v 1.3 2008/01/11 19:42:43 cardoe Exp $
 
 inherit eutils python
 
@@ -71,9 +71,9 @@ src_install() {
 }
 
 pkg_postinst() {
-	python_mod_optimize "${ROOT}"/usr/share/${PN}
+	python_mod_optimize /usr/share/${PN}
 }
 
 pkg_postrm() {
-	python_mod_cleanup "${ROOT}"/usr/share/${PN}
+	python_mod_cleanup /usr/share/${PN}
 }
