@@ -1,6 +1,10 @@
 # ChangeLog for sci-visualization/pyxplot
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/pyxplot/ChangeLog,v 1.6 2007/10/11 15:21:51 bicatali Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-visualization/cvs-repo/gentoo-x86/sci-visualization/pyxplot/ChangeLog,v 1.7 2008/01/11 19:42:43 cardoe Exp $
+
+  11 Jan 2008; Doug Klima <cardoe@gentoo.org> pyxplot-0.6.3.ebuild,
+  pyxplot-0.6.3.1.ebuild:
+  Fix ${ROOT} issues
 
 *pyxplot-0.6.3.1 (11 Oct 2007)
 
